Fix aside div sizing and wrap direction for current tasks section where cards appear

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ aside {
   border-bottom: solid #3C6577;
   display: flex;
   flex-direction: column;
-  height: 50%;
+  min-height: 50vh;
   width: 100%;
 }
 
@@ -148,6 +148,7 @@ aside {
   display: flex;
   align-items: center;
   flex-direction: column;
+  min-height: 10vh;
   width: 100%;
 }
 
@@ -159,7 +160,7 @@ aside {
 
 .current-tasks {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   width: 70%;
 }
